Update searchbar - fix overflow and message when no currencies found

--- a/Front/kantor-angular/src/app/search-results/search-results.component.scss
+++ b/Front/kantor-angular/src/app/search-results/search-results.component.scss
@@ -29,3 +29,9 @@
   list-style-type: none;  // Remove bullet points
   overflow-x: hidden;
 }
+
+.error-message {
+  margin-left: 20px;
+  margin-top: 10px;
+  height: 50px;
+}
